--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html, body {
   position: fixed;
   top: 20px;
   left: 50%;
-  /*transform: translateX(-50%);*/
+  transform: translateX(-50%);
   z-index: 12;
 }
 #festivalText img {
