--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ html, body {
   background-color: #ffffff;
 }
 
+h1,h2,h3,h4,h5,h6{
+	font-family: 'Caveat', cursive;
+}
+
 #countdown {
   position: fixed;
   top: 20px;
@@ -84,4 +88,16 @@ html, body {
 /* Thank you text styling */
 #thankYou {
   font-size: 24px;
+}
+
+#version-date {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-family: sans-serif;
+  font-size: 14px;
+  z-index: 100;
 }
