--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
-li {
-  max-width: 800px;
-  font-size: 1.1em;
-  margin: 0 auto 40px auto;
-  margin-bottom: 10px;          
-  line-height: 1.5;
-  text-align: justify
+/* center the list just like your <p> blocks */
+ul {
+  max-width: 800px;         /* same as your <p> */
+  margin: 0 auto 40px;      /* top-0, sides auto, bottom 40px */
+  padding-left: 1.5em;      /* indent for bullets; bump this up to move further right */
+  list-style-type: disc;    /* or whatever bullet you like */
+  list-style-position: outside;
 }
+
+/* style the items themselves */
+ul li {
+  font-size: 1.1em;
+  margin-bottom: 30px;      /* or whatever vertical spacing */
+  line-height: 1.5;
+  text-align: justify;      /* if you still want justified lines */
+}
+
 
 
 html, body {
